sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:7: error: '(' expected but identifier found.
      if plusPetit(i+1,i){
         ^AlgCocktailSort1:11: error: illegal start of simple expression
    }
    ^AlgCocktailSort1:15: error: '(' expected but identifier found.
      if plusPetit(i-1,i){
         ^AlgCocktailSort1:19: error: illegal start of simple expression
    }
    ^